--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -191,49 +191,284 @@ Multi-way repeated measures predictors. If you have a column name that represent
 education, income, etc
 
 
+### Working the examples
 
+Below we present example scripts transforming raw data to analytic data for various study designs (experimental and survey). These scripts illustrate the value of using the naming conventations outlined previously. Follow along with the projects by placing the data in your R Studio project folder and typing your own script. Resist the urge to cut and paste from this document. After learning and teaching scripting for years, there we've found there is substantial bennefit to the process of simply typing the script yourself.
+
+Setup an R Studio project using one of these approaches:
+
+R Studio in the Cloud Assignment
+1. The data should be in the assignment project automatically. Just start the assignment.
+
+R Studio in the Cloud, custom project
+1. Create a new Project using the web interface
+2. Upload your data files in using the upload button in the Files pane
+
+R Studio Local Computer, custom project
+1. Create a folder on your computer for the analysis
+2. Place your data files in that folder
+3. Use the menu item File > New Project... to start the project
+4. On the window that appears select "Existing Directory"
+5. On the next screen, press the "Browse" button and find/select the folder with your data
+6. Press the Create Project Button
+
+Regardless of whether your are working from the cloud or locally you should now have an R Studio project with your data files in it. Using Projects.
+
+As you read each of these example scripts pay attention to the redundancy. Regardless of the of the type of data you analyze there is a great deal of consistency in terms of how all of the scripts start.
+
+Pay particular attention to XXXX where the reearcher assistant didn't fllow and sex as 1 and 
 
 ## Experiment: Between-participant
 
-Runnning
+```{r, results='hide'}
+# Date: YYYY-MM-DD
+# Name: your name here
+# Example: Between-participant experiment
+
+# Load data
+library(tidyverse)
+
+my_missing_value_codes <- c("-999", "", "NA")
+
+raw_data_beween <- read_csv(file = "data_ex_between.csv",
+                     na = my_missing_value_codes)
+
+analytic_data_between <- raw_data_beween
+
+```
+
+```{r, results='hide'}
+library(janitor)
+
+# Initial cleaning
+analytic_data_between <- analytic_data_between %>%
+  remove_empty("rows") %>%
+  remove_empty("cols") %>%
+  clean_names()
+```
+
+You can confirm the column names following our naming convention with the glimpse command - and see the data type for each column.
+
+```{r}
+glimpse(analytic_data_between)
+```
+
+### Converting categorical variables to factors
+
+Following initial cleaning, identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect glimpse() output - if you followed our data entry naming conventions categorical variables should be of the type character. We have one variable sex that is categorical that is of type character (i.e., chr). The participant id column is categorical as well, but of type double (i.e., dbl) which is a numeric column.
+
+
+```{r}
+glimpse(analytic_data_between)
+```
+
+You can quickly convert all character columns to factors using the text below:
+
+```{r}
+# Turn all columns that are of type character into factors
+analytic_data_between <- analytic_data_between %>%
+  mutate(across(.cols = where(is.character),
+                .fns = as_factor))
+
+```
+
+The participant identification number in the id column is a numeric column, so we have handle that column on it's own. 
+
+```{r}
+analytic_data_between <-analytic_data_between %>%
+  mutate(id = as.factor(id))
+```
+
+You can ensure all of these columns are now factors using the glimpse() command. 
+
+```{r}
+glimpse(analytic_data_between)
+```
+
+Inspect the output of the glimpse() command and make sure you have coverted all categorical variables to factors - especially those you will use as predictors.
+
+
+### Levels of factors
+
+The order of the levels of factors influences how text output and graphs are generated. You can see the order of the factor levels using:
+
+```{r}
+analytic_data_between %>%
+  select(where(is.factor)) %>%
+  summary()
+```
+
+The sex column has two levels: male and female in that order. Below we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
+```{r}
+# Custom reordering of factor levels
+analytic_data_between <- analytic_data_between %>%
+  mutate(sex = fct_relevel(sex,
+                           "female",
+                           "male"))
+```
+
+
+You can see the new order of the factor levels with summary():
+```{r}
+analytic_data_between %>%
+  select(where(is.factor)) %>%
+  summary()
+```
+
+You now have a between-participant analytic data set.
 
 ## Experiment: Within-participant
 
-
 ### One repeated measures variable
 
-running within
+```{r, results='hide'}
+# Date: YYYY-MM-DD
+# Name: your name here
+# Example: Within-participant experiment
 
+# Load data
+library(tidyverse)
 
-### Multiple repeated measures variables
-
-food
-
-```{r, include = FALSE}
 my_missing_value_codes <- c("-999", "", "NA")
 
-raw_data_food <- read_csv(file = "data_food.csv",
+raw_data_within <- read_csv(file = "data_ex_within.csv",
                      na = my_missing_value_codes)
 
-analytic_data_food <- raw_data_food
-
-```
-```{r, eval = FALSE}
-my_missing_value_codes <- c("-999", "", "NA")
-
-raw_data_food <- read_csv(file = "data_food.csv",
-                     na = my_missing_value_codes)
-
-analytic_data_food <- raw_data_food
+analytic_data_within <- raw_data_within
 
 ```
 
-```{r, include=FALSE}
+
+```{r, results='hide'}
 library(janitor)
 
+# Initial cleaning
+analytic_data_within <- analytic_data_within %>%
+  remove_empty("rows") %>%
+  remove_empty("cols") %>%
+  clean_names()
+```
+
+You can confirm the column names following our naming convention with the glimpse command - and see the data type for each column.
+
+```{r}
+glimpse(analytic_data_within)
+```
+
+### Converting categorical variables to factors
+
+Following initial cleaning, identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect glimpse() output - if you followed our data entry naming conventions categorical variables should be of the type character. We have one variable sex that is categorical that is of type character (i.e., chr). The participant id column is categorical as well, but of type double (i.e., dbl) which is a numeric column.
+
+Importantly, note that we have a categorical variable that is missing because our data is not in the tidy data format. The predictor "occassion" (levels: march, may, and july) is missing. The levels for occasion are distributed over three columns. We will have to fix this later. For now we focus on the sex and id columns.
+
+
+```{r}
+glimpse(analytic_data_within)
+```
+
+You can quickly convert all character columns to factors using the text below. 
+
+```{r}
+# Turn all columns that are of type character into factors
+analytic_data_within <- analytic_data_within %>%
+  mutate(across(.cols = where(is.character),
+                .fns = as_factor))
+
+```
+
+The participant identification number in the id column is a numeric column, so we have handle that column on it's own. 
+
+```{r}
+analytic_data_within <-analytic_data_within %>%
+  mutate(id = as.factor(id))
+```
+
+You can ensure all of these columns are now factors using the glimpse() command. 
+
+```{r}
+glimpse(analytic_data_within)
+```
+
+Inspect the output of the glimpse() command and make sure you have coverted all categorical variables to factors - especially those you will use as predictors.
+
+
+### Levels of factors
+
+The order of the levels of factors influences how text output and graphs are generated. You can see the order of the factor levels using:
+
+```{r}
+analytic_data_within %>%
+  select(where(is.factor)) %>%
+  summary()
+```
+
+
+Here we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
+
+```{r}
+# Custom reordering of factor levels
+analytic_data_within <- analytic_data_within %>%
+  mutate(sex = fct_relevel(sex,
+                           "female",
+                           "male"))
+```
+
+You can see the new order of the factor levels with summary():
+```{r}
+analytic_data_within %>%
+  select(where(is.factor)) %>%
+  summary()
+```
+
+### Pivot to tidy data
+
+```{r}
+print(analytic_data_within)
+```
+
+
+```{r}
+analytic_data_within_tidy <- analytic_data_within %>%
+  pivot_longer(march:july,
+               names_to = "occasion",
+               values_to = "elapsed_time"
+  )
 ```
 
 ```{r}
+print(analytic_data_within_tidy)
+```
+
+
+```{r}
+analytic_data_within_tidy <-analytic_data_within_tidy %>%
+  mutate(occasion = as.factor(occasion))
+```
+
+```{r}
+glimpse(analytic_data_within)
+```
+
+### Multiple repeated measures variables
+
+```{r, results='hide'}
+# Date: YYYY-MM-DD
+# Name: your name here
+# Example: Within-participant experiment
+
+# Load data
+library(tidyverse)
+
+my_missing_value_codes <- c("-999", "", "NA")
+
+raw_data_food <- read_csv(file = "data_food.csv",
+                     na = my_missing_value_codes)
+
+analytic_data_food <- raw_data_food
+
+```
+
+```{r, results='hide'}
 library(janitor)
 
 # Initial cleaning
@@ -243,17 +478,86 @@ analytic_data_food <- analytic_data_food %>%
   clean_names()
 ```
 
+You can confirm the column names following our naming convention with the glimpse command - and see the data type for each column.
 
 ```{r}
-glimpse(analytic_data_food)
+glimpse(analytic_data_survey)
+```
+
+### Converting categorical variables to factors
+
+Following initial cleaning, identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect glimpse() output - if you followed our data entry naming conventions categorical variables should be of the type character
+
+
+```{r}
+glimpse(analytic_data_survey)
+```
+
+You can quickly convert all character columns to factors using the text below:
+
+```{r}
+# Turn all columns that are of type character into factors
+analytic_data_survey <- analytic_data_survey %>%
+  mutate(across(.cols = where(is.character),
+                .fns = as_factor))
+
+```
+
+The participant identification number in the id column is a numeric column, so we have handle that column on it's own. 
+
+```{r}
+analytic_data_survey <-analytic_data_survey %>%
+  mutate(id = as.factor(id))
+```
+
+You can ensure all of these columns are now factors using the glimpse() command. 
+
+```{r}
+glimpse(analytic_data_survey)
+```
+
+Inspect the output of the glimpse() command and make sure you have coverted all categorical variables to factors - especially those you will use as predictors.
+
+
+### Levels of factors
+
+The order of the levels of factors influences how text output and graphs are generated. You can see the order of the factor levels using:
+
+```{r}
+analytic_data_survey %>%
+  select(where(is.factor)) %>%
+  summary()
+```
+
+
+Here we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: intersex, female, male. 
+
+```{r}
+# Custom reordering of factor levels
+analytic_data_survey <- analytic_data_survey %>%
+  mutate(sex = fct_relevel(sex,
+                           "intersex",
+                           "female",
+                           "male"))
+```
+
+For eye color, we want to future graph to be have the most commmon eye colors on the left so we reorder the factor levels:
+```{r}
+#  Reordering factor levels by frequency
+analytic_data_survey <- analytic_data_survey %>%
+  mutate(eye_color = fct_infreq(eye_color))
+```
+
+You can see the new order of the factor levels with summary():
+```{r}
+analytic_data_survey %>%
+  select(where(is.factor)) %>%
+  summary()
 ```
 
 
 
 
-```{r}
-print(analytic_data_food)
-```
 
 ```{r}
 analytic_food_tidy <- analytic_data_food %>%
@@ -318,26 +622,7 @@ We begin by examining the data as originally entered into a spreadsheet. In Figu
 knitr::include_graphics("ch_score_items/images/screenshot_raw_data.png")
 ```
 
-### Loading raw data
 
-I suggest you begin every R Studio task in the following way:
-
-R Studio in the Cloud Assignment
-1. The data should be in the assignment project automatically
-
-R Studio in the Cloud, custom project
-1. Create a new Project using the web interface
-2. Upload your data files in using the upload button in the Files pane
-
-R Studio Local Computer, custom project
-1. Create a folder on your computer for the analysis
-2. Place your data files in that folder
-3. Use the menu item File > New Project... to start the project
-4. On the window that appears select "Existing Directory"
-5. On the next screen, press the "Browse" button and find/select the folder with your data
-6. Press the Create Project Button
-
-Regardless of whether your are working from the cloud or locally you should now have an R Studio project with your data files in it. Using Projects.
 
  * Create a new script in your project and save it with the name "script_raw_to_analytic.R"
  * Type the code below into that script
@@ -346,115 +631,122 @@ Regardless of whether your are working from the cloud or locally you should now 
 ```{r, results='hide'}
 # Date: YYYY-MM-DD
 # Name: your name here
+# Example: single occasion survey
 
 # Load data
 library(tidyverse)
 
 my_missing_value_codes <- c("-999", "", "NA")
 
-raw_data <- read_csv(file = "data_item_scoring.csv",
+raw_data_survey <- read_csv(file = "data_item_scoring.csv",
                      na = my_missing_value_codes)
 
-analytic_data <- raw_data
+analytic_data_survey <- raw_data_survey
 
 ```
 
+Remove empty row and columns from your data using the remove_empty_cols() and remove_empty_rows(), respectively. As well, clean the names of your columns to ensure they conform to tidyverse naming conventions. 
 
-Remove empty row and columns from your data using the remove_empty_cols() and remove_empty_rows(), respectively. As well, clean the names of your columns to ensure they conform to tidyverse naming conventions. This cleaning process ensures that names are all lower case, word separators are underscores and so on to match the [tidyverse style guidelines](https://style.tidyverse.org). This will correct many of the errors you may have made in your naming conventions when setting up your spreadsheet or data collection software. 
-
-```{r, include=FALSE}
-library(janitor)
-
-```
-
-```{r}
+```{r, results = "hide"}
 library(janitor)
 
 # Initial cleaning
-analytic_data <- analytic_data %>%
+analytic_data_survey <- analytic_data_survey %>%
   remove_empty("rows") %>%
   remove_empty("cols") %>%
   clean_names()
 ```
 
-
-You can see the column names after the cleaning, and the corresponding data type for each column. 
+You can confirm the column names following our naming convention with the glimpse command - and see the data type for each column.
 
 ```{r}
-glimpse(analytic_data)
+glimpse(analytic_data_survey)
 ```
 
+### Converting categorical variables to factors
 
-### Preparing categorical variables
+Following initial cleaning, identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect glimpse() output - if you followed our data entry naming conventions categorical variables should be of the type character
 
-Levels of ANOVA variables. But also, remember.
-
-
-It's often helpful to has id as a factor rather than a number so we add and extra command that changes this value:
 
 ```{r}
-analytic_data <-analytic_data %>%
-  mutate(id = as.factor(id))
+glimpse(analytic_data_survey)
 ```
 
-```{r}
+You can quickly convert all character columns to factors using the text below:
 
+```{r}
 # Turn all columns that are of type character into factors
-analytic_data <- analytic_data %>%
+analytic_data_survey <- analytic_data_survey %>%
   mutate(across(.cols = where(is.character),
                 .fns = as_factor))
 
 ```
 
+The participant identification number in the id column is a numeric column, so we have handle that column on it's own. 
 
 ```{r}
-glimpse(analytic_data)
+analytic_data_survey <-analytic_data_survey %>%
+  mutate(id = as.factor(id))
 ```
 
-Check levels of factors. Make sure it's ok.
+You can ensure all of these columns are now factors using the glimpse() command. 
 
 ```{r}
-analytic_data %>%
+glimpse(analytic_data_survey)
+```
+
+Inspect the output of the glimpse() command and make sure you have coverted all categorical variables to factors - especially those you will use as predictors.
+
+
+### Levels of factors
+
+The order of the levels of factors influences how text output and graphs are generated. You can see the order of the factor levels using:
+
+```{r}
+analytic_data_survey %>%
   select(where(is.factor)) %>%
   summary()
 ```
 
 
-Adjust order of levels of factors.
+Here we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: intersex, female, male. 
 
 ```{r}
 # Custom reordering of factor levels
-analytic_data <- analytic_data %>%
+analytic_data_survey <- analytic_data_survey %>%
   mutate(sex = fct_relevel(sex,
                            "intersex",
                            "female",
                            "male"))
 ```
 
+For eye color, we want to future graph to be have the most commmon eye colors on the left so we reorder the factor levels:
 ```{r}
 #  Reordering factor levels by frequency
-analytic_data <- analytic_data %>%
+analytic_data_survey <- analytic_data_survey %>%
   mutate(eye_color = fct_infreq(eye_color))
 ```
 
-
+You can see the new order of the factor levels with summary():
 ```{r}
-analytic_data %>%
+analytic_data_survey %>%
   select(where(is.factor)) %>%
   summary()
 ```
+
+
 
 ### Checking numerical variables
 
 
 ```{r, eval = FALSE}
-analytic_data %>%
+analytic_data_survey %>%
   select(where(is.numeric)) %>%
   summary()
 ```
 
 ```{r, eval = TRUE, echo = FALSE}
-analytic_data %>%
+analytic_data_survey %>%
   select(esteem1, esteem2, esteem3) %>%
   summary()
 ```
@@ -697,13 +989,13 @@ desired_descriptives <- list(
 row_sum <- analytic_data %>% 
   summarise(across(.cols = where(is.numeric),
                    .fns =  desired_descriptives,
-                   .names = “{col}___{fn}”))
+                   .names = "{col}___{fn}"))
 
 long_summary <- row_sum %>%
   pivot_longer(cols = everything(),
-               names_to = c(“var”, “stat”),
-               names_sep = c(“___”),
-               values_to = “value”)
+               names_to = c("var", "stat"),
+               names_sep = c("___"),
+               values_to = "value")
 
 summary_table <- long_summary %>% 
   pivot_wider(names_from = stat,
@@ -724,10 +1016,14 @@ If you want Cronbach’s alpha to estimate the reliability of the scale, you can
 
 ```{r, eval = TRUE}
 rxx_alpha <- analytic_data_items %>%
-  select(starts_with(“esteem”)) %>%
+  select(starts_with("esteem")) %>%
   psych::alpha()
 
 print(rxx_alpha$total)
 ```
 
+
+
+
+If you entered data following the style guide recommended here;  entering categorical variables by the category name rather than numerically we can quickly convert categorical variable to factors. For example, if you used a data entry convention where you entered male/female in the column for sex rather than 1 and 2 we can quickly convert all of those columns to factors. This because if you followed the naming convention, columns that contain categorical information will be of the character <chr> type. This is quickly revealed by a glimpse command:
 
